welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var vuBiscuit = false;
    for ( tour <-1 to 7){
     if (estSurBiscuit()==true){
	vuBiscuit == true 
	}
	
	avance();
    }
	
	



}

	                             
                                 